--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,59 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+body {
+    background-image: linear-gradient(to right top, #d18d6b, #d99c6b, #ddac6c, #dfbd6f, #ddcf76, #e1cd70, #e5cb6a, #eac865, #f6af5a, #ff945b, #ff7966, #fb5f78);
+}
+.padre__general {
+    width: 100%;
+    min-height: 100vh;
+}
+.btn__container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+.btn__agregar, .btn__limpiar {
+    width: 120px;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(233, 233, 233);
+    border-radius: 10px;
+    border: 1px solid rgb(224, 217, 217);
+    background-color: rgba(250, 71, 16, 0.87);
+    transition-duration: 300ms;
+}
+.btn__agregar:hover, .btn__limpiar:hover {
+    cursor: pointer;
+    background-color: rgba(255, 130, 92, 0.945);
+}
+.btn__agregar:active,.btn__limpiar:active {
+    transform: scale(0.9);
+    transition-property: transform;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+}
+
+/* Clases de los nodos agregados */
+.contenedor__agregados {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+.container__imagen {
+    width: 300px;
+    height: 250px;
+    background-color: rgb(104, 101, 101);
+}
